# PayloadX

./: .gitignore  DOCKER_GUIDE.md  docker.md  package-lock.json  package.json  payloadx_splash_screen_redesign.html  postman_json_viewer.html  render.yaml  test.json
.github/workflows/: tauri-build.yml
apps/: dockerguide
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json  server.js  tsconfig.json
apps/backend/app/: globals.css  layout.js  page.js  page.module.css
apps/backend/lib/: auth.js  db.js  requestProxy.js  requestProxySecurity.js  swaggerGen.js
apps/backend/models/: ActivityLog.js  ApiDoc.js  Collection.js  Comment.js  Environment.js  OtpSession.js  Project.js  Request.js  Team.js  User.js  Workflow.js  WorkflowExecution.js
apps/backend/src/: index.ts  server.js
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  vite.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cookie_jar.rs  main.rs  security.rs
apps/desktop/src-tauri/src/commands/: env_tools.rs  files.rs  http.rs  json.rs  mod.rs  postman.rs  url_tools.rs  workflow.rs
apps/desktop/src-tauri/src/workflow/: data_mapper.rs  executor.rs  mod.rs  models.rs  parser.rs  validator.rs
apps/landing/: .gitignore  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js  vite.config.js.timestamp-1778331738623-544f9a74d8ddc.mjs
apps/realtime/: .env.example  package.json  server.js
(+190 files in other folders)
