[package]
name = "payloadx-api-studio-dev"
version = "1.4.7"
description = "PayloadX API Studio"
authors = ["PayloadX Team"]
license = ""
repository = ""
default-run = "payloadx-api-studio-dev"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "dialog-ask", "dialog-message", "dialog-confirm", "shell-open", "fs-read-file", "fs-write-file", "fs-exists", "dialog-open", "dialog-save"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
url = "2.5"
tauri-plugin-oauth = "1"

# Workflow automation dependencies
petgraph = "0.6"
regex = "1.10"
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
